--- a/project.json
+++ b/project.json
@@ -3,8 +3,9 @@
   "description": "SCT9 Project 2 for Team Diamond",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Credentials.Activities": "[2.0.0]",
     "UiPath.Excel.Activities": "[2.11.4]",
-    "UiPath.Mail.Activities": "[1.12.3]",
+    "UiPath.Mail.Activities": "[1.15.1]",
     "UiPath.PDF.Activities": "[3.6.0]",
     "UiPath.System.Activities": "[22.4.1]",
     "UiPath.UIAutomation.Activities": "[20.10.9]",
