--- a/project.json
+++ b/project.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "UiPath.Credentials.Activities": "[2.0.0]",
     "UiPath.Excel.Activities": "[2.11.4]",
+    "UiPath.IntelligentOCR.Activities": "[6.0.1]",
     "UiPath.Mail.Activities": "[1.15.1]",
     "UiPath.PDF.Activities": "[3.6.0]",
     "UiPath.System.Activities": "[22.4.1]",
